# ROS1-2d-mapping-navigation

./: .gitignore  README.md  package.xml
first_project/: CMakeLists.txt  readme_first_project.txt
first_project/rviz/: rviz_config.rviz
first_project/src/: odometer.cpp
first_project_temp/launch/: launch.launch
second_project/: CMakeLists.txt  package.xml  readme_second_project.txt
second_project/cfg/: costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
second_project/csv/: goals.csv
second_project/launch/: amcl.launch.xml  task_1.launch  task_2.launch
second_project/maps/stage/: environment.world  robot.inc
second_project/rviz/: robot_mapping.rviz  robot_navigation.rviz
second_project/src/: controller.cpp  data_conversion.cpp
src/: gps_odometer.cpp  sector_times.cpp
